--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,13 +1,13 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #4776e6;
+$secondary-color: #8e54e9;
 
 $white-color: #fff;
 
-$dark-grey: #333333;
+$dark-grey: #1d1e38;
 $light-grey: #d2d2d2;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #1d1e38; // For Headings
 
 // FONT SIZE
 $default-font-size: 1.6rem;
